[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickbase-extract"
version = "0.5.1"
description = "Extract and cache Quickbase report data with built-in error handling and S3 support"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Tyler Brezler", email = "tbrezler@gmail.com"},
]
keywords = ["quickbase", "data-extraction", "caching", "etl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "quickbase-api>=0.5.0",
    "boto3>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.0",
    "ruff>=0.15.11",
]

[project.urls]
Homepage = "https://github.com/tbrezler/quickbase-extract"
Repository = "https://github.com/tbrezler/quickbase-extract.git"
Documentation = "https://github.com/tbrezler/quickbase-extract#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/quickbase_extract"]
include = ["src/quickbase_extract/py.typed"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["F", "E", "W", "B", "BLE", "I", "UP", "A", "RUF", "T10"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
